# inputreader

androidapplication/: AndroidClient.cpp  AndroidClient.h  AndroidServer.cpp  AndroidServer.h  CMakeLists.txt  main.cpp
inputreader/: CMakeLists.txt  main.cpp
inputreader/ include/: EventHub.h
inputreader/mangmi/: InputFilter.cpp  InputFilter.h  Macro.h  MangmiFlinger.cpp  MangmiFlinger.h  MangmiPolicy.cpp  MangmiPolicy.h
inputreader/mangmi/extend/: ThreadPool.cpp  ThreadPool.h
inputreader/mangmi/utils/: MangmiConfig.cpp  MangmiConfig.h  MangmiIntercepter.cpp  MangmiIntercepter.h  MangmiSocketClient.cpp  MangmiSocketClient.h  MangmiSocketServer.cpp  MangmiSocketServer.h  MangmiUtils.cpp  MangmiUtils.h  MiThreadPool.cpp  MiThreadPool.h
monitor/: CMakeLists.txt  main.cpp
monitor/include/: EventHub.h
monitor/mangmi/: InputFilter.cpp  InputFilter.h  MangmiEvent.cpp  MangmiEvent.h  MangmiEventPlus.cpp  MangmiEventPlus.h  MangmiFlinger.cpp  MangmiFlinger.h  MangmiPolicy.cpp  MangmiPolicy.h
monitor/mangmi/utils/: MangmiConfig.cpp  MangmiConfig.h  MangmiIntercepter.cpp  MangmiIntercepter.h  MangmiSocketClient.cpp  MangmiSocketServer.cpp  MangmiSocketServer.h  MangmiSocketServerPlus.cpp  MangmiSocketServerPlus.h  MangmiUtils.cpp  MangmiUtils.h
monitor/window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
